cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terra-ai-v2-service
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: terra-ai-v2
  type: NodePort
