cicd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terra-ai-v2-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-timeout: "600s"

spec: 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: terra-ai-v2-service
            port:
              number: 8000
